  longer be necessary to set an expanded Guile stack in gEDA's config
  files.

* The `partlist' backends for `gnetlist' now handle hierarchical
  refdes correctly.

* The `spice-sdb' backend for `gnetlist' now supports probes
  (`TESTPOINT' devices).

* On Windows, `gschem' and `gattrib' will no longer launch with a
  command window visible.

* The undocumented `mk_verilog_syms' program is no longer installed.
  The symbols it creates are still installed to
  `${prefix}/share/gEDA/sym/verilog'.

Notable changes in gEDA/gaf 1.6.1
=================================

* Added accelerator mnemonics for root menus in gschem

* Lots of updated and new language translations in libgeda, gschem, and
  gattrib.  (Courtesy of language translators and Launchpad) 

* Updated the shipped documentation from the official gEDA wiki

* Fixed the following bugs:

  - 2876373: Fix rendering with zoomed out dashed lines
  - 2901183: Fix for some manpage issues
  - 2904715: Don't update page connectivity from o_place_rotate()
  - 2949232: Fix slot editing routines to not edit inherited attributes 
  - Cherry picked some other bug fixes from master that should be in
    this release

Notable changes in gEDA/gaf 1.6.0
=================================

* Fixed the GtkItemEntry code inside of gattrib code so that it builds
  using gtk+ > 2.16.x.

* In gschem, rubberband pin to pin connections by adding nets.

* Cleanup of the slot handling code in libgeda.

* Fixes/updates to the MinGW port.

* Updated the shipped documentation from the online wiki.

Notable changes in gEDA/gaf 1.5.3/1.5.4
=======================================

* NOTE: gEDA/gaf 1.5.3 was released with some critical bugs, so
        it was withdrawn before it was widely distributed.

* Text rendering using native system fonts:

  - The various programs in gEDA/gaf no longer uses its own built-in
    line font.

  - Native system fonts are used for rendering, giving support for a