@@ -119,9 +119,9 @@ Print \fBgsch2pcb\fR version information.
 A \fBgsch2pcb\fR project file is a file (not ending in `.sch')
 containing a list of schematics to process and some options.  Any
 long-form command line option can appear in the project file with the
-leading `--' removed, with the exception of `--fix-elements',
-`--verbose', and `--version'.  Schematics should be listed on a line
-beginning with `schematics'.
+leading `--' removed, with the exception of `--gnetlist-arg',
+`--fix-elements', `--verbose', and `--version'.  Schematics should be
+listed on a line beginning with `schematics'.
 .PP
 An example project file might look like:
 
